Fix T72192: Mantaflow does not render flame when flow source is hidden from Renders

The problem in this case was that the flag for active fire was not set. With hidden flow sources the flag was not updated in update_flowsflags().

The solution for this is to take the active field from the config cache file.